@@ -18,13 +18,11 @@ DESIGN ISSUES
 - should only the negative dielectric charges move in the "Show all charges" view?
 
 HIGH PRIORITY
-- remove portion of bottom wire that is occluded by battery
 - address stroke issue in WireSegment.createShape
 - WireNode gets shapes from Wire, which has a Shape property, this pattern is different
 - hack in BottomWire
 
 MEDUIUM PRIORITY
-- wires don't connect to battery terminals perfectly
 - small (100mm^2) capacitor plates look like they are at a 46-degree yaw, instead of 45-degree
 - E-field detector for Intro tab: shrink width of vector display area, horizontally center Plate vector
 - BatteryCapacitorCircuitChangeListeners is inefficient/incomplete/incorrect, collapse to ChangeListener?
