@@ -1,3 +1,6 @@
+11/15/10 remove portion of bottom wire that is occluded by battery
+11/15/10 add battery terminal offsets to shape model, for more precise wire connections
+11/15/10 more precise model of positive battery terminal
 11/15/10 remove transparency feature from plates, they are always opaque
 11/15/10 remove dielectric transparency for voltmeter
 # 0.00.43 (46138) Nov 15, 2010
